2019-1/231/users/4208/executions/1622_2918.log
== TEST (2019-04-02 19:05:40) 
-- CODE:
precodoingresso=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
precopromocional=float((precodoingresso)-(precodoingresso*0.20)
print(round(precopromocional,2)
print(quantidade)
-- ERROR:
File "XXXX", line 4
    print(round(precopromocional,2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:06:28) 
-- CODE:
x=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
y=float((x)-(x*0.20)
print(round(y,2))
print(quantidade)
-- ERROR:
File "XXXX", line 4
    print(round(y,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:06:56) 
-- CODE:
x=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
y=float((x)-(x*0.20))
print(round(y,2))
print(quantidade)
-- EXECUTION TIME:
0.222169
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
22.8
5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
21.56
8
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
33.94
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:06:57) 
-- CODE:
x=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
y=float((x)-(x*0.20))
print(round(y,2))
print(quantidade)
-- OUTPUT:
22.8
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:02) 
-- CODE:
x=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
y=float((x)-(20/100))
print(round(y,2))
print(quantidade)
-- OUTPUT:
28.3
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:55) 
-- CODE:
x=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
y=float((x)-(20/100))
valortotal=(x*quantidade)
-- OUTPUT:
28.3
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:18) 
-- CODE:
x=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
y=float((x)-(20/100))
valortotal=(x*quantidade)
print(round(valortotal,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:41) 
-- CODE:
preco=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
precocomdesconto=float((preco)-((20/100)*preco)
valortotal=(x*quantidade)
print(round(valortotal,2))
-- ERROR:
File "XXXX", line 4
    valortotal=(x*quantidade)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:57) 
-- CODE:
preco=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
precocomdesconto=float((preco)-((20/100)*preco)
valortotal=(precocomdesconto*quantidade)
print(round(valortotal,2))
-- ERROR:
File "XXXX", line 4
    valortotal=(precocomdesconto*quantidade)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:11:06) 
-- CODE:
preco=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
precocomdesconto=float((preco)-((20/100)*preco)
valortotal=(precocomdesconto * quantidade)
print(round(valortotal,2))
-- ERROR:
File "XXXX", line 4
    valortotal=(precocomdesconto * quantidade)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:11:43) 
-- CODE:
preco=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
omdesconto=float((preco)-((20/100)*preco))
valortotal=(precocomdesconto * quantidade)
print(round(valortotal,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valortotal=(precocomdesconto * quantidade)
NameError: name 'precocomdesconto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:12:04) 
-- CODE:
preco=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
desconto=float((preco)-((20/100)*preco))
valortotal=(desconto * quantidade)
print(round(valortotal,2))
-- OUTPUT:
114.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:12:18) 
-- CODE:
preco=float(input("qual o preco do ingresso?"))
quantidade=int(input("qual a quantidade de ingressos?"))
desconto=float((preco)-((20/100)*preco))
valortotal=(desconto * quantidade)
print(round(valortotal,2))
-- EXECUTION TIME:
0.137528
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
114.0
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
101.81
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
